# Spoken-Teacher

./: .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  PROJECT_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  netlify.toml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  dev.db  pyproject.toml  railway.json  requirements-optional.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_avatar_style.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  conversations.py  meta.py  progress.py  users.py  voice.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  redis.py  security.py
backend/app/models/: __init__.py  achievement.py  conversation.py  correction.py  enums.py  profile.py  progress.py  setting.py  stats.py  user.py  voice.py
backend/app/schemas/: admin.py  auth.py  common.py  conversation.py  progress.py  tutor.py  user.py
backend/app/scripts/: seed.py
backend/app/services/: admin_service.py  auth_service.py  conversation_service.py  email.py  presence.py  progress_service.py
backend/app/services/ai/: fallback.py  gemini.py  groq.py  parsing.py  prompts.py  stt.py  tts.py  tutor.py
backend/app/ws/: manager.py  voice.py
backend/tests/: conftest.py  test_auth.py  test_chat.py
frontend/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  (+2 more)
(+78 files in other folders)
